# ACE-Platform

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
.agent/rules/: acerule.md
.agent/workflows/: qa.md
.pencil-analysis/extracted/: [Content_Types].xml  extension.vsixmanifest
DEV REPORT/: competitive_ai_analysis.md  crazy_upgrade.md  pencil_design_system_reference.md  pencil_dev_analysis.md  pencil_sage_workflow_trace.md  upgrade_roadmap.md
ace-mcp/: package-lock.json  package.json
ace-mcp/src/: index.ts  tools.ts
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/routes/: health.py  vision_fix.py  vision_qa.py
coverage/: coverage-final.json  lcov.info
coverage/lcov-report/: index.html
crates/ace-engine/: Cargo.toml
crates/ace-engine/src/: animation.rs  commands.rs  effects.rs  interaction.rs  lib.rs  renderer.rs  scene.rs  wasm.rs
crates/ace-engine/src/shaders/: quad.wgsl
e2e/: ace-qa.spec.ts  canvas-editor.spec.ts  dashboard.spec.ts  multi-tab-sync.spec.ts  size-dashboard.spec.ts
src/: index.css  main.tsx  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/ai/: aceToolDef.ts  agentContext.ts  agentTools.ts  aiService.ts  commandExecutor.ts  contextRouter.test.ts  contextRouter.ts  dashboardExecutor.ts  dashboardTools.ts  executorCompound.ts  executorHelpers.ts  smartContextBuilder.ts  suggestions.ts  visionSelfCheck.ts
src/api/: backendService.ts
src/app/: AdminPage.tsx  AiTestPage.tsx  AnimationTestPage.tsx  App.tsx  AuthCallback.tsx  DashboardPage.tsx  DetailEditorPage.tsx  EffectsTestPage.tsx  EngineTestPage.tsx  ExportTestPage.tsx  GeneralEditorPage.tsx  LandingPage.tsx  LoginPage.tsx  (+3 more)
supabase/: fix_auto_approve.sql  fix_rls_recursion.sql  migration.sql  migration_auth.sql
test-results/: .last-run.json
wasm/: README.md
(+295 files in other folders)
