[package]
name = "ace-tauri"
version = "0.1.0"
description = "ACE – Autonomous Creative Engine (Tauri App)"
authors = ["ACE Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ace-engine = { path = "../crates/ace-engine" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
wgpu = "24"
tokio = { version = "1", features = ["rt-multi-thread"] }
